<resources>
    <string name="app_name">NewsSearch</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="beginDate">Begin Date</string>
    <string name="sortOrder">Sort Order</string>
    <string name="news">News Desk Values</string>
    <string name="arts">arts</string>
    <string name="fashion">fashion and style</string>
    <string name="sport">sport</string>
    <string name="save">SAVE</string>



</resources>
